# easy_prompt_selector_for_comfyui

./: README.ja  README.md  README_JP.md  __init__.py  ill_hair.yml  pyproject.toml
.github/workflows/: publish.yml
easy_prompt_selector/: __init__.py  ill_hair.yml  selector.py
