[project]
name = "easy_prompt_selector_for_comfyui"
description = "A simple custom node for ComfyUI that loads and provides an all-in-one dropdown selector to build a prompt string."
version = "1.0.0"
license = {file = "LICENSE"} 
# classifiers = [
#     # For OS-independent nodes (works on all operating systems)
#     "Operating System :: OS Independent",
#
#     # OR for OS-specific nodes, specify the supported systems:
#     "Operating System :: Microsoft :: Windows",  # Windows specific
#     "Operating System :: POSIX :: Linux",  # Linux specific
#     "Operating System :: MacOS",  # macOS specific
#
#     # GPU Accelerator support. Pick the ones that are supported by your extension.
#     "Environment :: GPU :: NVIDIA CUDA",    # NVIDIA CUDA support
#     "Environment :: GPU :: AMD ROCm",       # AMD ROCm support
#     "Environment :: GPU :: Intel Arc",      # Intel Arc support
#     "Environment :: NPU :: Huawei Ascend",  # Huawei Ascend support
#     "Environment :: GPU :: Apple Metal",    # Apple Metal support
# ]


[project.urls]
Repository = "https://github.com/Atsushi888/easy_prompt_selector_for_comfyui"
#  Used by Comfy Registry https://registry.comfy.org
Documentation = "https://github.com/Atsushi888/easy_prompt_selector_for_comfyui/wiki"
"Bug Tracker" = "https://github.com/Atsushi888/easy_prompt_selector_for_comfyui/issues"

[tool.comfy]
PublisherId = ""
DisplayName = "easy_prompt_selector_for_comfyui"
Icon = ""
includes = [] 
# "requires-comfyui" = ">=1.0.0"  # ComfyUI version compatibility

